--- a/.github/workflows/cross-bootstrap-tools.yml
+++ b/.github/workflows/cross-bootstrap-tools.yml
@@ -17,33 +17,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target_arch: [ amd64, aarch64 ]
-        os: [ ubuntu-20.04, ubuntu-22.04, macos-latest ]
+        target_arch: [ amd64 ]
+        os: [ macos-latest ]
         include:
           # TODO: both Ubuntu and macOS have bmake packages, we should try them instead of bootstrapping our own copy.
-          - os: ubuntu-20.04
-            compiler: clang-12
-            cross-bindir: /usr/lib/llvm-12/bin
-            pkgs: bmake libarchive-dev clang-12 lld-12
-          - os: ubuntu-22.04
-            compiler: clang-14
-            cross-bindir: /usr/lib/llvm-14/bin
-            pkgs: bmake libarchive-dev clang-14 lld-14
           - os: macos-latest
             compiler: clang-13
             cross-bindir: /opt/homebrew/opt/llvm@13/bin
             pkgs: bmake libarchive llvm@13
           - target_arch: amd64
             target: amd64
-          - target_arch: aarch64
-            target: arm64
     steps:
       - uses: actions/checkout@v4
-      - name: install packages (Ubuntu)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update --quiet || true
-          sudo apt-get -yq --no-install-suggests --no-install-recommends install ${{ matrix.pkgs }}
       - name: install packages (macOS)
         if: runner.os == 'macOS'
         run: |
